Fixes and Games module
* Create Games module which will contain mini-games for telegram chat
* Create SoloGambleCommand and TenorUtil. Basically 50/50 gamble command with randomized GIF
* Added methods and wrappers to be able to send GIFs